all content in for these few pages, need to work on the styling quite a bit

--- a/src/app/plan/plan.html
+++ b/src/app/plan/plan.html
@@ -29,8 +29,8 @@
 					</p>
 					<p>The first Sunday of each month is Holy Communion.</p>
 					<p>All are invited to the table</p>
-					<h4><a href='#'>Adult Bible Discussions: 9:00 AM</a></h4>
-					<h4><a href='#'>Sunday Children and Youth Program</a></h4>
+					<h4><a href='#/ministries#adultbible'>Adult Bible Discussions: 9:00 AM</a></h4>
+					<h4><a href='#/ministries#childrenand'>Sunday Children and Youth Program</a></h4>
 					<h3 id='afterworship'>After Worship is Fellowship</h3>
 					<h4>Meet &amp; Greet, friends old and new!</h4>
 					<p>Every week after worship plan to visit our fellowship time and get to know the friendly folk at CBCC.
