--- a/src/app/spiritual/spiritual.html
+++ b/src/app/spiritual/spiritual.html
@@ -1,6 +1,6 @@
 <div id="container" class='otherpages'>
   <header>
-    <h1>Cocoa Beach Community Church</h1>
+  <h1><a ui-sref='home'>Cocoa Beach Community Church</a></h1>
   </header>
   <nav>
     <a href ="https://www.facebook.com/CBCC.UCC" target="_blank"><i class="fa fa-facebook-official"></i></a>
@@ -17,25 +17,54 @@
 		<div class='row'>
 			<section class='lefttext col-md-6 col-md-offset-1'>
 				<h2>Spiritual Life</h2>
-				<h4>Spritual Life Teams</h4>
+				<h3>Spritual Life Teams</h3>
+				<h4>CURRENTLY THERE ARE FOUR SPIRITUAL LIFE TEAMS AT CBCC
+				</h4>
+				<h5 id='team1'>Team 1: Leader is Susan Martin</h5>
+				<p>Meets at 10 AM on the 1st and 3rd Thursdays of each month.
+				</p>
+				<h5 id='team2'>Team 2: Leader is John Harbaugh 
+				</h5>
+				<p>Meets at Juice and Java on the 3rd Wednesday of each month.  The time varies.
+				</p>
+				<h5 id='team3'>Team 3: Men’s team.  Loren Bowling is the leader
+				</h5>
+				<p> Meet at 9 AM on the 2nd Tuesday of each month.
+				</p>
+				<h5 id='team4'>Team 4: Leader is Doloris Bowling
+				</h5>
+				<p>Meets at 10 AM on the 4th Thursday of each month 
+				</p>
+				<h3>Prayer, personal experiences with God, and prayer requests are always part of a meeting.  Service to CBCC and the community are broad goals.
+				</h3>
+				<h5 id='whatis'>What is a Spiritual Life Team (SLT)? What happens at SLT Meetings?
+				</h5>
+				<h5>Why would I want to be a member of a SLT? Why are SLTs necessary?  
+				</h5>
+				<p>These are questions most SLT members would welcome.
+				</p>
+				<p>Learning more about Spiritual Life Teams by visiting the Spiritual Health Center Website below and meet Dr. Bobbie McKay who created the concept of Spiritual Life Teams.
+				</p>
+
 				<p>For 23 years, The Spiritual Health Center has studied the spiritual lives of over 4,000 people in mainstream, Protestant, Catholic, Reform Jewish, and Muslim congregations.
 				</p>
-				<h4>What we discovered,</h4>
+				<h3>What we discovered,</h3>
 				<p>was simple and profound: People have experiences of the presence or action of God which are life-transforming, meaning God becomes real to them. But people rarely, if ever, share these experiences for fear of being perceived as weird, crazy, or too religious.
 				</p>
-				<h4>Our passion and our mission is to ignite that spiritual energy and light up the world with God's presence.</h4>
+				<h3>Our passion and our mission is to ignite that spiritual energy and light up the world with God's presence.</h3>
 </p>
 <p>We offer FIVE PROGRAMS which have proven incredibly effective in developing the spiritual lives of people in all circumstances, faith traditions and cultures. These programs can transform your life: God can become real for you. And the spiritual connections you form will make God real in the world. 
 </p>
+<p>From Dr. Bobbie McKay ….http://www.spiritualhealthcenter.org/</p>
 <a href='http://www.spiritualhealthcenter.org/' target='_blank'>From Dr. Bobbie McKay</a>
 			</section><!--lefttext-->
 			<section class='rightlinks col-md-2 col-md-offset-1'>
 					<h3>Spiritual Life</h3>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
+					<a ng-click="scrollTo('team1')">Team 1</a>
+					<a ng-click="scrollTo('team2')">Team 2</a>
+					<a ng-click="scrollTo('team3')">Team 3</a>
+					<a ng-click="scrollTo('team4')">Team 4</a>
+					<a ng-click="scrollTo('whatis')">What is a SLT</a>
 			</section><!--rightlinks-->
 		</div>
   </section>
