--- a/src/app/ministries/ministries.html
+++ b/src/app/ministries/ministries.html
@@ -105,53 +105,36 @@
 				<p>
 				If you need a ride or want to provide a ride please contact church office. 321-783-3961
 				</p>
-
-
-
-				<h3>---whats happening with this stuff---</h3>	
-				<p>All ages gather for worship at 10:00 AM in the church sanctuary. Our worship is primarily traditional worship with our church choir offering an inspiring anthem almost every week. We have a talented rotation of soloists and ensemble teams that encompass other musical genres creating a diverse musical experience on Sundays.
-				</p>
-				<h4>((maybe a choir heading/section?))</h4>
-				<p>Choir Director: Mrs. Janet Johns</p>
-				<p>Church Organist: Mr. David Wrable</p>
-				<p>Choir Rehearsal:</p>
-				<p>Wednesdays evenings at 7:00 PM and Sunday Mornings at 9:30AM</p>
-				<h4>Adult Bible Discussions: 9:00 AM</h4>
-				<h4>Sunday Children and Youth : 10:00AM</h4>
-				<p>The Sunday morning program is for K to 6th; 7th to 12th are welcome to participate in the Hands On leadership team or remain in worship. 
-				</p>
-				<p>During our worship service, a slide indicates that children and youth can depart for morning program that includes Bible Stories, Music, Elements of Worship, Crafts, Games and Refreshments.  After worship, parents can meet with their children in Sponsler Hall.</p>
-				<p>Parents with infants and small children:</p>
-				<p>We are unable to offer childcare or educational class for children less than four years of age.  We do invite families to remain in worship and use our break room if needed, which is located near the front doors. You are still able to see and hear the worship service!</p>
-				<h4>After Worship is Fellowship</h4>
-				<p>Meet and Greet Friends Old and New!</p>
-				<p>Every week after worship plan to visit our fellowship time and get to know the friendly folk at CBCC.
-				</p>
-				<p>Potluck Lunch! The first Sunday of every month we enjoy a terrific potluck lunch. Don’t worry if you didn’t bring a dish to share because there is always plenty to go around!
-				</p>
-				<p>Fellowship is more than coffee!
-				</p>
-				<p>It is an important part of the gathered church life!
-				</p>
-				<h4>SUNDAY SERVANTS</h4>
-				<p>Each week it takes many hands to insure that our worship is the best it can be. We welcome those who wish to serve on Sundays! 
-				</p>
-				<p>Sunday School Leadership Team: 
-				</p>
-				<p>Ushers and Greeters: 
-				</p>
+				<h3 id='sundayservants'>Sunday Servants</h3>
+				<h4>Sunday School Leadership Team</h4>
+				<p>no static info yet... contact Coleman Todd</p>
+				<h4>Ushers and Greeters</h4>
 				<p>Be an usher or a greeter. This is an important and vital service to our worshipping community. A greeter’s warm smile and a friendly “good morning” at the door makes anyone feel better. Our ushers make sure everyone finds a comfortable seat and has a worship bulletin. Ushers participate in the worship service too; lighting altar candles, collecting the offering and serving communion. 
 				</p>
-				<p>Audio/Visual:</p>
+				<p>Contact Michelle Mills in the church office: michelle@cbcc-ucc.org</p>
+				<h4>Audio Visual</h4>
 				<p>Audio: Be a soundboard technician! Learn how to operate our soundboard, set up microphones and help our musical teams sound their very best.
 				</p>
 				<p>
 				Video: Be a Clicker! Weekly PowerPoint presentations need someone to “click” through the slides that project our hymns, liturgy and scripture. 
 				</p>
-				<p>Fellowship Hosts
+				<p>Contact Coleman Todd at coleman@cbcc-ucc.org</p>
+				<h4>Fellowship Hosts</h4>
+				<p>Consider hosting fellowship one Sunday! Hosts don’t need to buy the food (they can) but our Sunday snacks are purchased in advance and already at the church. Fellowship hosts need to come in earlier on Sunday and set up. Hosts often leave worship a little early to be prepared for those ready for a good cup of coffee and a snack after worship and then tidy up thereafter. A great ministry for couples or two friends who love to entertain.
 				</p>
-				<p>Consider hosting fellowship one Sunday! Hosts don’t need to buy the food (they can) but our Sunday snacks are purchased in advance and already at the church. Fellowship hosts need to come in earlier on Sunday and set up. Hosts often leave worship a little early to be prepared for those ready for a good cup of coffee and a snack after worship and then tidy up thereafter. A great ministry for couples or two friends who love to entertain. 
+				<p>Contact Michelle Mills in the church office: michelle@cbcc-ucc.org
 				</p>
+				<h3 id='choir'>Choir</h3>
+				<p>Choir Rehearsas are Wednesdays evenings at 7:00 PM and Sunday Mornings at 9:30AM in Sponsler Hall. Our church choir offers an inspiring anthem almost every week. We also have a talented rotation of soloists and ensemble teams that encompass other musical genres creating a diverse musical experience on Sundays. Come and share your musical talents with us!
+				</p>
+				<h5>Ceoir Director</h5>
+				<p>Jan Johns (Picture if she wants… I have a bio for Jan Johns too that we could include here) 
+				</p>
+				<h5>Church Organist</h5>
+				<p>David Wrable</p>
+				<h5>Church Organist</h5>
+				<p>David Wrable</p>
+
 
 			</section><!--lefttext-->
 			<section class='rightlinks col-md-2 col-md-offset-1 hidden-xs'>
@@ -169,6 +152,8 @@
 					<a ng-click="scrollTo('statenational')">State, National and Global Missions</a>
 					<a ng-click="scrollTo('pastoralcare')">Pastoral Care</a>
 					<a ng-click="scrollTo('providea')">Provide a Ride</a>
+					<a ng-click="scrollTo('sundayservants')">Sunday Servants</a>
+					<a ng-click="scrollTo('choir')">Choir</a>
 			</section><!--rightlinks-->
 		</div>
   </section>
