push of last content added to give page

--- a/src/app/give/give.html
+++ b/src/app/give/give.html
@@ -15,15 +15,54 @@
 		</div>
 		<div class='row'>
 			<section class='lefttext col-md-6 col-md-offset-1'>
-				<h2>Give</h2>
+			<h2>Give</h2>
+			<h3>CBCC STEWARDSHIP PLEDGES</h3>
+			<p>
+			We are grateful for the generosity of our members and friends who make up the congregation of Cocoa Beach Community Church.  It truly takes all of us working together to allow us to continue to provide for all the needs of our church and the needs of those in our community who depend on us. 
+			</p>
+			<p>
+			Stewardship is about making choices, as individuals and in community.  It is more than giving money to the church. Stewardship is about being faithful disciples, caring for and managing all that God has given us.  Stewardship is the grateful response to God’s grace and goodness.  It requires a consideration of how our choices affect us and others, of how we can be good caretakers of the created world, and of how we can best serve God and disciples of Christ.
+			</p>
+			<p>
+Please use the PayPal ink below to pay your weekly pledge or give a donation to the General Fund. ( info about how to proceed with Paypal?)
+			</p>
+			<h3 id='donate'>need you guys to get me button info</h3>
+			<h3 id='ourchurch'>OUR CHURCH WIDER MISSION (OCWM)</h3>
+			<h4>UNITED CHURCH OF CHRIST SPECIAL SUPPORT</h4>
+			<p>
+			In addition to the annual pledge and other missions CBCC also supports four special offerings for the United Church of Christ. Members and friends are invited to give to these funds that provide finances to many organizations beyond our church walls! Information is provided in weekly worship bulletins as we lead up to these offerings. Gifts can be received at church in the offering plate, mailed into the church office, or online through the UCC. Please read below about these offerings. 
+			</p>
+			<p>
+			<b>Our Church's Wider Mission</b> Special Support comprises gifts to the four Special Mission Offerings in the United Church of Christ, per capita dues, and gifts that are specially designated for the Conference, national setting or UCC-related institutions. By mandate of the General Synod, each local church receives promotional material for the four Special Mission Offerings:
+			</p>
+			<h3 id='onegreat'> One Great Hour of Sharing: Giving Help, Hope and Life</h3>
+			<p>
+			Supports partners in more than 70 countries with ministries that fund development projects, feed the victims of famine, provide services for displaced people, and respond to natural disasters. These ministries are the responsibility of Wider Church Ministries, Global Sharing of Resources. Received annually on the fourth Sunday in Lent.
+			</p>
+			<a href="http://www.ucc.org/oghs/" target='_blank'>www.ucc.org/oghs/</a>
+			<h3 id='strengthen'>Strengthen the Church: Faithfully Building the Body of Christ</h3>
+			<p>
+			Supports church growth and leadership development in the conferences and through the national offices of Local Church Ministries. Received annually on Pentecost Sunday.
+			</p>
+			<a href="http://www.ucc.org/stc/" target='_blank'>www.ucc.org/stc/</a>
+			<h3 id='neighbors'>Neighbors in Need: Justice and Compassion Like a Mighty Stream</h3>
+			<p>
+			Supports ministries of justice and compassion throughout the United States and Puerto Rico, including ministry carried out by the Council for American Indian Ministries (CAIM) and by the national offices of Justice and Witness Ministries. Received annually on World Communion Sunday, the first Sunday of October.
+			</p>
+			<a href="http://www.ucc.org/nin/" target='_blank'>www.ucc.org/nin/</a>
+			<h3 id='thechristmas'>The Christmas Fund: Remembering Those Who Serve Our Church</h3>
+			<p>
+			Provides financial aid to retired and active ministers and their surviving spouses and children who face overwhelming financial demands, a ministry carried out by the Pension Boards. Received annually on the Sunday before Christmas.
+			</p>
 			</section><!--lefttext-->
 			<section class='rightlinks col-md-2 col-md-offset-1'>
 					<h3>Give</h3>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
+					<a ng-click="scrollTo('donate')">Make a Donation</a>
+					<a ng-click="scrollTo('ourchurch')">Our Church Wider Mission</a>
+					<a ng-click="scrollTo('onegreat')">One Great Hour of Sharing</a>
+					<a ng-click="scrollTo('strengthen')">Strengthen the Church</a>
+					<a ng-click="scrollTo('neighbors')">Neighbors in Need</a>
+					<a ng-click="scrollTo('thechristmas')">The Christmas Fund</a>
 			</section><!--rightlinks-->
 		</div>
   </section>
