added content to the thrift shop page and also made part of the corrections to the ministries page

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -232,6 +232,9 @@ footer {
 		.pagescontent {
 			padding-top: 9em;	
 		}
+		.worshiptime{
+			font-size: 150%;
+		}
 		.topimage {
 			background: url('../assets/images/frontofchurch.jpg') center;
 			background-size: cover;
