--- a/src/app/ministries/ministries.html
+++ b/src/app/ministries/ministries.html
@@ -16,12 +16,12 @@
 		<div class='row'>
 			<section class='lefttext col-md-6 col-md-offset-1'>
 				<h2>MINISTRIES</h2>
-				<h3 id='worship'>Worship</h3>
-				<p>Sundays @ 10:00 AM.</p>
+				<h3 id='worship'>WORSHIP</h3>
+				<p class='worshiptime'>Sundays @ 10:00 AM.</p>
 				<p>Minister: Rev. Dr. Bill Tyson</p>
 				<p>Choir Director: Mrs. Janet Johns</p>
 				<p>Organist: Mr. David Wrable</p>
-				<h3 id='education'>Education</h3>
+				<h3 id='education'>EDUCATION</h3>
 				<p>Coleman Todd: Associate for Church Growth, Social Justice and Education</p>
 				<h3 id='adultbible'>Adult Bible Discussion</h3>		
 				<h4>Sundays at 9:00am and Tuesdays at 2:00pm</h4>
@@ -50,7 +50,7 @@
 				</p>
 				<p>------BLOG INSERTION-------</p>
 				<p>Contact Coleman Todd at <a href='mailto:coleman@cbcc-ucc.org'>coleman@cbcc-ucc.org</a></p>
-				<h3 id='mission'>Mission</h3>
+				<h3 id='mission'>MISSION</h3>
 				<p>“Let us not love with words or speech but with actions and in truth.”
 				</p>
 				<h4 id='local'>Local</h4>
