--- a/src/app/thriftshop/thriftshop.html
+++ b/src/app/thriftshop/thriftshop.html
@@ -16,15 +16,84 @@
 		<div class='row'>
 			<section class='lefttext col-md-6 col-md-offset-1'>
 				<h2>Thrift Shop</h2>
-				<h4>Open:</h4>
-				<p>Monday and Thursdays 9:30am - 3:00pm</p>
-				<p>Friday and Saturday 10:00am - 1:00pm</p>
-				<p>Serving the people of the Space Coast w/ outstanding quality merchandise at a fraction of retail. We also have a great selection of Books, Tapes, CDs & DVDs
+				<h4>Hours:</h4>
+				<p>Mondays and Thursdays 9:30am - 3:00pm</p>
+				<p>Fridays and Saturdays 10:00am - 1:00pm</p>
+				<p>
+				Visit our Facebook page at <a href="https://www.facebook.com/profile.php?id=100006235637971">https://www.facebook.com/profile.php?id=100006235637971</a>
 				</p>
+				<p>
+				Since 1965 the Community Church has served Cocoa Beach by operating our Thrift Shop.  We started as a couple of women sitting at a card table after church selling baby clothes.  Today we five rooms packed to the rafters with clothing, glassware, decorative items, linens, books, records, DVDs, collectibles and holiday decorations.
+				</p>
+				<h3 id='purpose'>The purpose of the Thrift Shop is two fold:</h3>
+				<ol>
+						<li>to offer very reasonably priced household items and clothing to our community members</li>
+				<li>
+				to raise funds so that our church can serve the world with our outreach projects
+				</li>
+				</ol>
+				<h3 id='distribute'>
+				We also distribute our donated items in the event that we can't use them or that another group needs them more.  Here are some of our neighbors that receive donations from us:
+				</h3>
+				<p>Comforters, blankets & coats given to the Church of Our Saviour Cold Night Ministry for the homeless during time of need. 
+				</p>
+				<p>
+				Blankets, sheets, pillows and towels to the Humane Society (247 bags). 
+				</p>
+				<p>
+				Eye glasses go to the Lions Club (224). 
+				</p>
+				<p>
+				Cell phones go to the Veteran's Center (52). 
+				</p>
+				<p>
+				School supplies are donated to Brevard County Teacher's Depot (60)
+				</p>
+				<p>
+				Clothing that cannot be sold in our thrift shop is given to American Veterans for sale in their thrift shop. 
+				</p>
+				<p>
+				Homeless are given clothing and toiletries when they are in need. 
+				</p>
+				<p>
+				Clothes and miscellaneous items were donated to Wego Ministries/Glory Mansion in Cocoa Beach to help with their garage sale.  (22 bags). Clients of Glory Mansion are also given gift certificates.
+				</p>
+				<p>
+				Books and Bibles are given to the the Correction Center and the Seafarer's Mission.  (131 boxes)
+				</p>
+				<p>
+				Children's books are given to the Rolling Readers (25 boxes)
+				</p>
+				<p>
+				Gift certificates available year round. 
+				</p>
+				<p>
+				Costumes and clothing that may be used as costumes were donated to Surfside Playhouse in Cocoa Beach. 
+				</p>
+				<p>
+				Calendars were donated to nursing homes, 
+				</p>
+				<p>
+				Bikes were donated to the Lutheran Church for their bikes ministry for children and the homeless.
+				</p>
+				<p>
+				Adult bibs, bedpans, new Christmas cards, and miscellaneous items are donated to nursing homes.  
+				</p>
+				<p>
+				14 useable flags donated and 9 flags to be burned to the Veteran’s Center.   
+				</p>
+				<p>
+				Uniforms were donated to both Girls and Boy Scouts.  
+				</p>
+				<p>
+				Stuffed animals are given to the Seafarer's Mission
+				</p>
+				<p class='annotation'>(Totals in parentheses represent 2014 contributions)</p>	
 			</section><!--lefttext-->
 			<section class='rightlinks col-md-2 col-md-offset-1'>
 					<h3>Thrift Shop</h3>
-					<p>Placeholder</p>
+					<a ng-click="scrollTo('purpose')">Purpose</a>
+					<a ng-click="scrollTo('distribute')">Item Distribution</a>
 					<p>Placeholder</p>
 					<p>Placeholder</p>
 					<p>Placeholder</p>
