--- a/src/app/womensfellowship/womensfellowship.html
+++ b/src/app/womensfellowship/womensfellowship.html
@@ -15,22 +15,67 @@
 		</div>
 		<div class='row'>
 			<section class='lefttext col-md-6 col-md-offset-1'>
-				<h2>Events</h2>
-				<h4>Local:</h4>
-				<h4>Beyond:</h4>
-				<p>Womens Fellowship</p>
-				<a href='http://www.uccfla.org/uccfla/Disaster_Ministry.html'>Disaster Ministry Opportunities</a><br />
-				<a href='http://www.ucc.org/disaster'>Disaster</a><br />
-				<a href='http://www.ucc.org/justice'>Advocate for Justice and Peace</a><br />
-				<a href='http://www.globalministries.org/'>UCC Global Ministries</a><br />
+				<h2>Womens Fellowship</h2>
+				<h3 id='whowe'>Who we are and what we do</h3>
+				<p>
+				The Women’s Fellowship consists of women who are members or friends of the Cocoa Beach Community Church.  Any woman who is interested in the programs of Women’s Fellowship or the church is welcome and encouraged to attend our meetings.  We usually meet on the second Thursday of each month from September through May.  
+				</p>
+				<h3 id='ouractivities'>
+				Our activities fall into one of the following categories:
+				</h3>
+				<p>
+				Fellowship – Christian women gathering together to socialize and bond.
+				</p>	
+				<p>
+				Service & Giving – We serve the church and the community with our time, talents and treasure.
+				</p>
+				<p>
+				Fundraising – We participate in fundraising efforts to support our projects.
+				</p>
+				<p>
+				Education – Most meetings feature an interesting program presented by representatives from local experts.  We have covered all types of topics including local agencies, historians, artists, medical specialists, and law enforcement to name a few.
+				</p>
+				<p>
+				Prayer – Of course prayer is always a priority with our Women’s Fellowship.  Our Chaplain opens every meeting with an inspirational story, verse or prayer that reminds us that we are first and foremost Christian women.
+				</p>
+				<h3 id='projects'>Projects</h3>
+				<p>Thrift Shop – This project has two very important purposes:  to offer clothing and household items to the community at very affordable prices and to raise funds to support the many services and ministries of CBCC and WF.
+				</p>
+				<p>
+				Annual Card Party – Each February we host a card party that is both a fundraiser and a fun social event.  This event is eagerly anticipated each year by women all across our community.  Although the card games, favors and raffle prizes are a big draw, the most popular offering is the secret recipe chicken salad that is only available once a year at our card party!
+				</p>
+				<h3 id='communitygiving'>Community Giving – Some of the community organizations that we contribute to include:</h3>
+				<p>
+				Brevard Sharing Center
+				</p>
+				<p>
+				Crosswinds Youth Program
+				</p>
+				<p>
+				Salvation Army Abused Women Shelter
+				</p>
+				<p>
+				Glory Mansion (WEGO Ministry) Shelter for women in crisis
+				</p>
+				<p>
+				Seafarers Ministry
+				</p>
+				<p>
+				Sandwich Ministry
+				</p>
+				<p>
+				Brevard Rescue Mission for Women and Children
+				</p>
+				<p>Closer to home we help to fund many improvements to our church campus including window replacement, new carpeting, roof repairs and other decorative and functional betterment projects.</p>
+				<p>
+				Please join us!  Call the CBCC office at 321-783-3961 to find out the date and time of our next event.  We would love to see you there!</p>
 			</section><!--lefttext-->
 			<section class='rightlinks col-md-2 col-md-offset-1'>
 					<h3>Opportunities</h3>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
+					<a ng-click="scrollTo('whowe')">Who we are</a>
+					<a ng-click="scrollTo('ouractivities')">Our activities</a>
+					<a ng-click="scrollTo('projects')">Our projects</a>
+					<a ng-click="scrollTo('communitygiving')">Community Giving</a>
 			</section><!--rightlinks-->
 		</div>
   </section>
