--- a/src/app/ministries/ministries.html
+++ b/src/app/ministries/ministries.html
@@ -19,92 +19,6 @@
 				<h3 id='worship'>WORSHIP</h3>
 				<p class='worshiptime'>Sundays @ 10:00 AM.</p>
 				<p>Minister: Rev. Dr. Bill Tyson</p>
-				<p>Choir Director: Mrs. Janet Johns</p>
-				<p>Organist: Mr. David Wrable</p>
-				<h3 id='education'>EDUCATION</h3>
-				<p>Coleman Todd: Associate for Church Growth, Social Justice and Education</p>
-				<h3 id='adultbible'>Adult Bible Discussion</h3>		
-				<h4>Sundays at 9:00am and Tuesdays at 2:00pm</h4>
-				<h5>Facilatator: Loren Bowling</h5>
-				<p>	
-				This class is based on the Standard Lesson Quarterly [NIV]. SLQ combines meaningful Bible study with culturally relevant examples and discussion questions.       
-				</p>	
-				<h3 id='childrenand'>Children and Youth Programs</h3>	
-				<p>
-				NO CURRENT PLAN FOR HERE…..WE WILL HAVE STATIC INFO SOON AND EVENTUALLY IT WOULD BE NICE TO HAVE A LINK PULL CURRENT INFO FROM A BLOG HERE.
-				</p>
-				<h3 id='centerfor'>
-				CENTER FOR SPIRITUAL ENRICHMENT
-				</h3>
-				<h4>
-				Thursdays 12:00 PM to 2:00 PM
-				</h4>
-				<h4>
-				12:00 PM LUNCH $3.00 / 12:30 PM – 2:00 PM PROGRAM 
-				</h4>
-				<h4>
-				Facilitated by Cindy Johnson and Coleman Todd
-				</h4>
-				<p>
-				The CSE gathers throughout the year for book studies, video presentations and discussions on various topics on progressive religion and spiritual interest. 
-				</p>
-				<p>------BLOG INSERTION-------</p>
-				<p>Contact Coleman Todd at <a href='mailto:coleman@cbcc-ucc.org'>coleman@cbcc-ucc.org</a></p>
-				<h3 id='mission'>MISSION</h3>
-				<p>“Let us not love with words or speech but with actions and in truth.”
-				</p>
-				<h4 id='local'>Local</h4>
-				<h5 id='hungerknows'>HUNGER KNOWS NO SEASON . . . WE COLLECT FOOD EVERY WEEK!</h5>
-				<p>
-				CBCC helps support many food ministries In Cocoa Beach and throughout the Space Coast.  We appreciate the food and other items brought in each Sunday and placed in our basket. Single serving items are used in ready to eat lunch bags available at the thrift store and at the church office.  Other foods items are given to local food pantries.  
-				</p>
-				<h5 id='underoaks'>UNDER THE OAKS. . .SECOND SATURDAY SUPPERS
-				</h5>
-				<p>
-				Bring some friends and come enjoy a late afternoon of Food, Fellowship and often there is live music too. This is a great outreach opportunity.  Invite friends or someone you may know who may be looking for a church home but may be hesitant to come on Sunday mornings.  Of course we hope each month more and more will just drop in.  Maybe it will be neighbors needing nourishment, or seekers seeking spirit, or friends finding fellowship. Want to Help? Food, Set-up / Clean-up:  Contact Coleman Todd at <a href='mailto:coleman@cbcc-ucc.org'>coleman@cbcc-ucc.org</a></p>
-				<h5 id='cocoabeach'>
- 				COCOA BEACH COMMUNITY MEAL
-				</h5>
-				<p>First &amp; Third Sundays of Each Month from 5:00 PM to 7:00 PM.</p>
-				<p>Food Pantry Open during the meal </p>
-				<p>Location: First United Methodist Church: 3300 N. Atlantic Ave.</p>
-				<p>Want to volunteer? Contact Coleman Todd at  <a href='mailto:coleman@cbcc-ucc.org'>coleman@cbcc-ucc.org</a></p>
-				<h3 id='statenational'>
-				STATE, NATIONAL AND GLOBAL MISSION
-				</h3>	
-				<h4 id='uccmission'>
-				UCC Mission opportunities: 
-				</h4>
-				<a href='http://www.uccfla.org/uccfla/Disaster_Ministry.html'>www.uccfla.org/uccfla/Disaster_Ministry.html</a><br />
-				<a href='http://www.ucc.org/disaster'>www.ucc.org/disaster</a><br />
-				<a href='http://www.ucc.org/justice'>www.ucc.org/justice</a><br />
-				<a href='http://www.globalministries.org/'>www.globalministries.org/</a><br />
-				<h4 id='cropwalk'>Crop Walk</h4>
-				<p>
-				Communities Responding to Overcome Poverty.  CROP Walk is a fundraising activity that helps to feed hungry people in Central Brevard County as well as around the rest of the U.S. and world.  
-				25% of funds raised stay local, used for Central Brevard Sharing Center’s Community Kitchen Program. See Church World Service link below to find out more about Crop Walk.
-				</p>
-				<a href='http://hunger.cwsglobal.org'>hunger.cwsglobal.org</a>
-				<h3 id='pastoralcare'>
-						PASTORAL CARE
-				</h3>
-				<h4>
-					SPREADING LOVE AND CARE
-				</h4>
-				<p>
-				Caring members of our Church regularly visit members and friends in their homes, in hospitals, or in nursing homes. Birthday cards, Get-Well Wishes, and Miss-You cards are sent regularly. Those who receive it appreciate this personal contact provided by members of our church. The gift of giving & sharing is deeply rewarding. 
-				</p>
-				<p>
-				Do you know someone in need? Do you need a Birthday or Anniversary added to The Courier or card list?  Was one missed?
-				</p>
-				<p>Other things here…need to fill in.,...... </p>
-				<h3 id='providea'>PROVIDE A RIDE</h3>
-				<p>
-				Some church members and friends need rides to church on Sundays, or to meetings and activities our church offers during the week. 
-				</p>
-				<p>
-				If you need a ride or want to provide a ride please contact church office. 321-783-3961
-				</p>
 				<h3 id='sundayservants'>Sunday Servants</h3>
 				<h4>Sunday School Leadership Team</h4>
 				<p>no static info yet... contact Coleman Todd</p>
@@ -127,7 +41,7 @@
 				<h3 id='choir'>Choir</h3>
 				<p>Choir Rehearsas are Wednesdays evenings at 7:00 PM and Sunday Mornings at 9:30AM in Sponsler Hall. Our church choir offers an inspiring anthem almost every week. We also have a talented rotation of soloists and ensemble teams that encompass other musical genres creating a diverse musical experience on Sundays. Come and share your musical talents with us!
 				</p>
-				<h5>Ceoir Director</h5>
+				<h5>Choir Director</h5>
 				<p>Jan Johns (Picture if she wants… I have a bio for Jan Johns too that we could include here) 
 				</p>
 				<h5>Church Organist</h5>
@@ -136,6 +50,92 @@
 				<p>David Wrable</p>
 
 
+				<h3 id='education'>EDUCATION</h3>
+				<p>Coleman Todd: Associate for Church Growth, Social Justice and Education</p>
+				<h4 id='adultbible'>Adult Bible Discussion</h4>		
+				<h5>Sundays at 9:00am and Tuesdays at 2:00pm</h5>
+				<h5>Facilatator: Loren Bowling</h5>
+				<p>	
+				This class is based on the Standard Lesson Quarterly [NIV]. SLQ combines meaningful Bible study with culturally relevant examples and discussion questions.       
+				</p>	
+				<h4 id='childrenand'>Children and Youth Programs</h4>	
+				<p>
+				NO CURRENT PLAN FOR HERE…..WE WILL HAVE STATIC INFO SOON AND EVENTUALLY IT WOULD BE NICE TO HAVE A LINK PULL CURRENT INFO FROM A BLOG HERE.
+				</p>
+				<h4 id='centerfor'>
+				CENTER FOR SPIRITUAL ENRICHMENT
+				</h4>
+				<h5>
+				Thursdays 12:00 PM to 2:00 PM
+				</h5>
+				<h5>
+				12:00 PM LUNCH $3.00 / 12:30 PM – 2:00 PM PROGRAM 
+				</h5>
+				<h5>
+				Facilitated by Cindy Johnson and Coleman Todd
+				</h5>
+				<p>
+				The CSE gathers throughout the year for book studies, video presentations and discussions on various topics on progressive religion and spiritual interest. 
+				</p>
+				<p>------BLOG INSERTION-------</p>
+				<p>Contact Coleman Todd at <a href='mailto:coleman@cbcc-ucc.org'>coleman@cbcc-ucc.org</a></p>
+				<h3 id='mission'>MISSION</h3>
+				<p>“Let us not love with words or speech but with actions and in truth.”
+				</p>
+				<h4 id='local'>Local</h4>
+				<h5 id='hungerknows'>HUNGER KNOWS NO SEASON . . . WE COLLECT FOOD EVERY WEEK!</h5>
+				<p>
+				CBCC helps support many food ministries In Cocoa Beach and throughout the Space Coast.  We appreciate the food and other items brought in each Sunday and placed in our basket. Single serving items are used in ready to eat lunch bags available at the thrift store and at the church office.  Other foods items are given to local food pantries.  
+				</p>
+				<h5 id='thriftshop'>Thrift Shop</h5>
+				<p><a ui-sref='thriftshop'>Click here to read about the CBCC Thrift Shop</a></p>
+				<h5 id='underoaks'>UNDER THE OAKS. . .SECOND SATURDAY SUPPERS
+				</h5>
+				<p>
+				Bring some friends and come enjoy a late afternoon of Food, Fellowship and often there is live music too. This is a great outreach opportunity.  Invite friends or someone you may know who may be looking for a church home but may be hesitant to come on Sunday mornings.  Of course we hope each month more and more will just drop in.  Maybe it will be neighbors needing nourishment, or seekers seeking spirit, or friends finding fellowship. Want to Help? Food, Set-up / Clean-up:  Contact Coleman Todd at <a href='mailto:coleman@cbcc-ucc.org'>coleman@cbcc-ucc.org</a></p>
+				<h5 id='cocoabeach'>
+				Cocoa Beach Community Meal
+				</h5>
+				<p>First &amp; Third Sundays of Each Month from 5:00 PM to 7:00 PM.</p>
+				<p>Food Pantry Open during the meal </p>
+				<p>Location: First United Methodist Church: 3300 N. Atlantic Ave.</p>
+				<p>Want to volunteer? Contact Coleman Todd at  <a href='mailto:coleman@cbcc-ucc.org'>coleman@cbcc-ucc.org</a></p>
+				<h3 id='statenational'>
+						State, National and Global Mission
+				</h3>	
+				<h4 id='uccmission'>
+				UCC Mission opportunities: 
+				</h4>
+				<a href='http://www.uccfla.org/uccfla/Disaster_Ministry.html'>Disaster Ministry Opportunities</a><br />
+				<a href='http://www.ucc.org/disaster'>Information about Disaster Ministry</a><br />
+				<a href='http://www.ucc.org/justice'>Advocates for Justive and Peage</a><br />
+				<a href='http://www.globalministries.org/'>Global Ministries</a><br />
+				<h4 id='cropwalk'>Crop Walk</h4>
+				<p>
+				Communities Responding to Overcome Poverty.  CROP Walk is a fundraising activity that helps to feed hungry people in Central Brevard County as well as around the rest of the U.S. and world.  
+				25% of funds raised stay local, used for Central Brevard Sharing Center’s Community Kitchen Program. See Church World Service link below to find out more about Crop Walk.
+				</p>
+				<a href='http://hunger.cwsglobal.org'>hunger.cwsglobal.org</a>
+				<h3 id='pastoralcare'>
+						PASTORAL CARE
+				</h3>
+				<h4>
+					Spreading Love and Care
+				</h4>
+				<p>
+				Caring members of our Church regularly visit members and friends in their homes, in hospitals, or in nursing homes. Birthday cards, Get-Well Wishes, and Miss-You cards are sent regularly. Those who receive it appreciate this personal contact provided by members of our church. The gift of giving & sharing is deeply rewarding. 
+				</p>
+				<p>
+				Do you know someone in need? Do you need a Birthday or Anniversary added to The Courier or card list?  Was one missed?
+				</p>
+				<p>Other things here…need to fill in.,...... </p>
+				<h3 id='providea'>Provide a Ride</h3>
+				<p>
+				Some church members and friends need rides to church on Sundays, or to meetings and activities our church offers during the week. 
+				</p>
+				<p>
+				If you need a ride or want to provide a ride please contact church office. 321-783-3961
+				</p>
 			</section><!--lefttext-->
 			<section class='rightlinks col-md-2 col-md-offset-1 hidden-xs'>
 					<h3>MINISTRIES</h3>
