--- a/src/app/thriftshop/thriftshop.html
+++ b/src/app/thriftshop/thriftshop.html
@@ -1,6 +1,6 @@
 <div id="container" class='otherpages'>
   <header>
-    <h1>Cocoa Beach Community Church</h1>
+  <a ui-sref='home'><h1>Cocoa Beach Community Church</h1></a>
   </header>
   <nav>
     <a href ="https://www.facebook.com/CBCC.UCC" target="_blank"><i class="fa fa-facebook-official"></i></a>
@@ -100,5 +100,19 @@
 					<p>Placeholder</p>
 			</section><!--rightlinks-->
 		</div>
-  </section>
+		</section>
+		<div class='row bottomimages'>
+				<div class='col-sm-3'>
+					<img src='assets/images/thriftshop1.jpg' class='img-responsive'>
+				</div>		
+				<div class='col-sm-3'>
+					<img src='assets/images/thriftshop2.jpg' class='img-responsive'>
+				</div>		
+				<div class='col-sm-3'>
+					<img src='assets/images/thriftshop3.jpg' class='img-responsive'>
+				</div>		
+				<div class='col-sm-3'>
+					<img src='assets/images/thriftshop4.jpg' class='img-responsive'>
+				</div>		
+		</div>
 </div>
