--- a/src/app/womensfellowship/womensfellowship.html
+++ b/src/app/womensfellowship/womensfellowship.html
@@ -1,6 +1,6 @@
 <div id="container" class='otherpages'>
   <header>
-    <h1>Cocoa Beach Community Church</h1>
+  <a ui-sref='home'><h1>Cocoa Beach Community Church</h1></a>
   </header>
   <nav>
     <a href ="https://www.facebook.com/CBCC.UCC" target="_blank"><i class="fa fa-facebook-official"></i></a>
@@ -79,4 +79,18 @@
 			</section><!--rightlinks-->
 		</div>
   </section>
+		<div class='row bottomimages'>
+				<div class='col-sm-3'>
+					<img src='assets/images/womensfellowship1.jpg' class='img-responsive'>
+				</div>		
+				<div class='col-sm-3'>
+					<img src='assets/images/womensfellowship2.jpg' class='img-responsive'>
+				</div>		
+				<div class='col-sm-3'>
+					<img src='assets/images/womensfellowship3.jpg' class='img-responsive'>
+				</div>		
+				<div class='col-sm-3'>
+					<img src='assets/images/womensfellowship4.jpg' class='img-responsive'>
+				</div>		
+		</div>
 </div>
