added facilities page

--- a/src/app/facilities/facilities.html
+++ b/src/app/facilities/facilities.html
@@ -15,15 +15,51 @@
 		</div>
 		<div class='row'>
 			<section class='lefttext col-md-6 col-md-offset-1'>
-				<h2>Facilities</h2>
+			<h2>Facilities</h2>
+			<h3 id='weddings'>WEDDINGS</h3>
+			<h4>Cocoa Beach Community Church</h4>
+			<p>Classic Space ~ Careful Planning ~ Commitment to Excellence
+			</p>
+			<p>We are glad that you are thinking of getting married in Cocoa Beach Community Church.  U.C.C.  We know your wedding is a sacred expression of love!
+			</p>
+			<p>
+			CBCC combines historic charm and beauty with 21st Century innovations to provide a truly exceptional wedding experience. Let our experienced staff make this a special day for all concerned. Our Sanctuary is perfect for your wedding. Come and See!
+			</p>
+			<h4>Cocoa Beach Community Church Provides a Full Feature Wedding Package 
+			</h4>
+			<p>Let Us Help Make Your Wedding Day the Best it Can Be at CBCC.  
+			</p>
+			<ul>
+					<li>High quality sound system! Your musical selections sound fabulous</li>
+					<li>Church Organist is Available</li>
+					<li>PowerPoint and Video Projection  is Available  </li>
+					<li>Catering and Reception Options</li>
+					<li>Wedding Consultations</li>
+					<li>Sound & Projection Technician Onsite</li>
+			</ul>
+			<p>
+			We also offer the flexibility for smaller more intimate weddings. Quality audio and other multi-media options always available.
+			</p>
+			<p>A marriage is a commitment that has its foundation in the faithfulness of God’s love. The marriage ceremony is the glad occasion on which two people unite as husband and wife in the exchange of covenant promises.
+			</p>
+			<h3 id='receptions'>RECEPTIONS</h3>
+			<p>Sponsler Hall is located on the grounds of CBCC with a well equipped kitchen and banquet hall for those who want to plan for their wedding reception at CBCC. 
+			</p>
+			<p>Bridal Showers or your Rehearsal Dinner are perfect for Sponsler Hall too.
+			</p>
+			<p>Sponsler Hall is great for birthday parties, anniversary celebrations, dinners or meetings. Contact the church office at 321-783-3961 for more information or email: <a href="mailto:michelle@cbcc-ucc.org">michelle@cbcc-ucc.org</a>
+			</p>
+			<h3 id='recitals'>RECITALS</h3>
+			<p>Our church sanctuary is perfect for musical recitals and concerts.
+			</p>
+			<h3 id='retreats'>RETREATS</h3>
 			</section><!--lefttext-->
 			<section class='rightlinks col-md-2 col-md-offset-1'>
 					<h3>Facilities</h3>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
-					<p>Placeholder</p>
+					<a ng-click="scrollTo('weddings')">Weddings</a>
+					<a ng-click="scrollTo('receptions')">Receptions</a>
+					<a ng-click="scrollTo('recitals')">Recitals</a>
+					<a ng-click="scrollTo('retreats')">Retreats</a>
 			</section><!--rightlinks-->
 		</div>
   </section>
